## @start 1
## Process this file with automake to produce Makefile.in

CPPFLAGS = -I$(top_srcdir)/include
CFLAGS = -g -Wall -Werror -std=c99
LDFLAGS = -lm


lib_LTLIBRARIES            = libwiigestures.la
libwiigestures_la_SOURCES = gesture.c  gesturemodel.c  hmm.c  observation.c  quantizer.c  util.c
## @end 1
